--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-pandas
-scikit-learn
-numpy
-matplotlib
-seaborn
-streamlit 
+pandas>=1.5.0
+scikit-learn>=1.2.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+streamlit>=1.22.0
+plotly>=5.0.0
+xgboost>=1.6.0
+imbalanced-learn>=0.9.0
+joblib>=1.2.0 
